Add fonts, change background

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,13 +10,13 @@
 @import "footer";
 
 body {
-  background: url(../../src/static/background.png) no-repeat center center fixed;
+  background: url(../../src/static/background.jpg) no-repeat center center fixed;
   background-color: black;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   color: #FFFFFF;
-  // font-family: ArialNarrow;
+  font-family: Regular;
 }
 
