--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,21 +1,20 @@
-/*
+
 @font-face {
-  font-family: ArialNarrow;
-  src: url(../../src/fonts/arialnarrow.ttf);
+  font-family: Regular;
+  src: url(../../src/fonts/PPFormulaCondensed-Regular.otf);
 }
 
 @font-face {
-  font-family: FugueHeadline;
-  src: url(../../src/fonts/fugue_headline.ttf);
+  font-family: Ultralight;
+  src: url(../../src/fonts/PPFormulaCondensed-Ultralight.otf);
 }
 
 @font-face {
-  font-family: FugueRegular;
-  src: url(../../src/fonts/fugue_regular.ttf);
+  font-family: Bold;
+  src: url(../../src/fonts/PPNeueMontreal-Bold.otf);
 }
 
 @font-face {
-  font-family: NeueMachina;
-  src: url(../../src/fonts/NeueMachina-Regular.otf);
+  font-family: Book;
+  src: url(../../src/fonts/PPNeueMontreal-Book.otf);
 }
-*/
