--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,20 +1,20 @@
 
 @font-face {
-  font-family: Regular;
+  font-family: Condensed-Regular;
   src: url(../../src/fonts/PPFormulaCondensed-Regular.otf);
 }
 
 @font-face {
-  font-family: Ultralight;
+  font-family: Condensed-Ultralight;
   src: url(../../src/fonts/PPFormulaCondensed-Ultralight.otf);
 }
 
 @font-face {
-  font-family: Bold;
+  font-family: Montreal-Bold;
   src: url(../../src/fonts/PPNeueMontreal-Bold.otf);
 }
 
 @font-face {
-  font-family: Book;
+  font-family: Montreal-Book;
   src: url(../../src/fonts/PPNeueMontreal-Book.otf);
 }
