--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -10,6 +10,10 @@ ul, li, ul li {
   list-style-type: none;
 }
 
+p {
+  margin: 0;
+}
+
 input, button {
   border: none;
   background: transparent;
