--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,10 +1,15 @@
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   padding: 0 20px;
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: solid 1px #E0E0E0;
+  font-family: Condensed-Regular;
 
   nav {
     display: flex;
