--- a/src/scss/section-1.scss
+++ b/src/scss/section-1.scss
@@ -12,11 +12,11 @@
   img {
     width: 690px;
     position: absolute;
-    animation: fadeInSlow 10s;
+    animation: fadeInSlow 3s;
   }
 }
 
-@keyframes fadeInSlow {
+@keyframes fadeInFast {
   0% {opacity:0.3;}
   100% {opacity:1;}
 }
