--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,7 +9,9 @@
 @import "header";
 @import "footer";
 @import "section-1";
+@import "section-4";
 @import "section-5";
+@import "section-6";
 
 body {
   background: url(../../src/static/background.jpg) no-repeat center center fixed;
@@ -19,6 +21,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   color: #FFFFFF;
+  font-family: Montreal-Book, serif;
 }
 
 main {
@@ -51,6 +54,18 @@ h2 {
   }
 }
 
+h3 {
+  font-size: 22px;
+  text-transform: uppercase;
+  font-family: Condensed-Ultralight, serif;
+  margin-bottom: 20px;
+  line-height: 32px;
+
+  span {
+    font-size: 13px;
+  }
+}
+
 strong {
   font-family: Montreal-Bold, serif;
 }
@@ -59,6 +74,10 @@ p {
   font-size: 19px;
   line-height: 24px;
   font-family: Montreal-Book, serif;
+}
+
+.__fade {
+  opacity: 1;
 }
 
 .section3 {
@@ -74,25 +93,3 @@ p {
   }
 }
 
-.section4 {
-  display: flex;
-
-  div {
-    max-width: 550px;
-    margin-top: 126px;
-    margin-left: auto;
-    margin-right: 80px;
-  }
-
-  p {
-    margin-bottom: 20px;
-  }
-
-  img {
-    width: 280px;
-    position: absolute;
-    left: 200px;
-    transform: rotate(20deg);
-
-  }
-}
