--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -9,7 +9,7 @@ header {
   align-items: center;
   justify-content: space-between;
   border-bottom: solid 1px #E0E0E0;
-  font-family: Condensed-Regular;
+  font-family: Condensed-Regular, serif;
 
   nav {
     display: flex;
