--- a/src/scss/section-1.scss
+++ b/src/scss/section-1.scss
@@ -12,16 +12,23 @@
   img {
     width: 690px;
     position: absolute;
-    animation: fadeInSlow 3s;
+    animation: fadeInSlow 8s;
   }
 }
 
 @keyframes fadeInFast {
-  0% {opacity:0.3;}
-  100% {opacity:1;}
+  0% {
+    opacity: 0.3;
+    margin-bottom: -80px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-bottom: 0;
+  }
 }
 
 @keyframes fadeInSlow {
-  0% {opacity:0;}
-  100% {opacity:1;}
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
