--- a/src/scss/section-1.scss
+++ b/src/scss/section-1.scss
@@ -3,6 +3,9 @@
   align-items: center;
   justify-content: center;
 
+  width: 100%;
+  height: 100%;
+
   p {
     max-width: 945px;
     text-align: center;
