--- a/src/scss/section-2.scss
+++ b/src/scss/section-2.scss
@@ -1,7 +1,8 @@
 .section2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
+  padding: 80px 0;
 
   img {
     width: 90px;
