--- a/src/scss/section-3.scss
+++ b/src/scss/section-3.scss
@@ -1,8 +1,9 @@
 .section3 {
+  padding-top: 80px;
 
   div {
     max-width: 550px;
-    margin-top: 86px;
+    //margin-top: 80px;
     margin-right: 80px;
     margin-left: auto;
   }
