--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -37,12 +37,12 @@ main {
 
 section {
   width: 100%;
-  height: 100%;
+  //height: 100%;
   position: relative;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  //left: 0;
+  //top: 0;
+  //right: 0;
+  //bottom: 0;
 }
 
 h2 {
@@ -80,4 +80,69 @@ p {
 
 .__fadeIn {
   opacity:0;
+}
+
+.__vectors {
+  position: absolute;
+
+  img {
+    position : absolute;
+
+    opacity: 0;
+    animation-name: fadeInVS1;
+    animation-duration: 10s;
+    animation-iteration-count: 1000;
+    animation-fill-mode: forwards;
+  }
+}
+
+.__vector_1 {
+  animation-delay: .5s;
+}
+
+.__vector_2 {
+  animation-delay: 1s;
+}
+
+.__vector_3 {
+  animation-delay: 1.5s;
+}
+
+.__vector_4 {
+  animation-delay: 2s;
+}
+
+.__vector_5 {
+  animation-delay: 2.5s;
+}
+
+.__vector_6 {
+  animation-delay: 3s;
+}
+
+.__vector_7 {
+  animation-delay: 3.5s;
+}
+
+.__vector_8 {
+  animation-delay: 4s;
+}
+
+.__vector_9 {
+  animation-delay: 4.5s;
+}
+
+@keyframes fadeInVS1 {
+  /*
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+  */
+  0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
 }
