--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -48,11 +48,19 @@ section {
 h2 {
   font-family: Condensed-Ultralight, serif;
   font-size: 40px;
+  line-height: 57px;
   margin-bottom: 40px;
   text-transform: uppercase;
 
   span {
     font-family: Condensed-Regular, serif;
+  }
+
+  @include media-breakpoint-down(lg) {
+    text-align: center;
+    font-size: 25px;
+    line-height: 36px;
+    margin-bottom: 20px;
   }
 }
 
@@ -63,8 +71,19 @@ h3 {
   margin-bottom: 20px;
   line-height: 32px;
 
+  @include media-breakpoint-down(lg) {
+    font-size: 18px;
+    line-height: 26px;
+  }
+
   span {
     font-size: 13px;
+    line-height: 18px;
+
+    @include media-breakpoint-down(lg) {
+      font-size: 11px;
+      line-height: 16px;
+    }
   }
 }
 
@@ -76,6 +95,11 @@ p {
   font-size: 19px;
   line-height: 24px;
   font-family: Montreal-Book, serif;
+
+  @include media-breakpoint-down(lg) {
+    font-size: 12px;
+    line-height: 17px;
+  }
 }
 
 .__fadeIn {
