--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -31,6 +31,10 @@ header {
       padding-top: 3px;
       border-bottom: solid 3px #E0E0E0;
     }
+
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
   }
 
   .logo {
