--- a/src/scss/section-4.scss
+++ b/src/scss/section-4.scss
@@ -7,6 +7,11 @@
     //margin-left: auto;
     margin-left: 50%;
     //margin-right: 80px;
+    padding: 0 10px;
+
+    @include media-breakpoint-down(lg) {
+      margin: 0;
+    }
   }
 
   p {
@@ -19,5 +24,9 @@
     left: 150px;
     top: 20px;
     transform: rotate(20deg);
+
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
   }
 }
