--- a/src/scss/section-5.scss
+++ b/src/scss/section-5.scss
@@ -6,6 +6,12 @@
     //margin-left: auto;
     margin-left: 340px;
     margin-right: 80px;
+
+    padding: 0 10px;
+
+    @include media-breakpoint-down(lg) {
+      margin: 0;
+    }
   }
 
   p {
@@ -18,6 +24,10 @@
     left: 40px;
     top: -80px;
     animation:spin 400s linear infinite;
+
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
   }
 }
 
