--- a/src/scss/section-3.scss
+++ b/src/scss/section-3.scss
@@ -1,6 +1,14 @@
 .section3 {
   padding-top: 80px;
 
+  @include media-breakpoint-down(lg) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 0;
+  }
+
   div {
     max-width: 550px;
     //margin-top: 80px;
@@ -10,6 +18,7 @@
 
     @include media-breakpoint-down(lg) {
       margin: 0;
+      max-width: 460px;
     }
   }
 
@@ -22,12 +31,16 @@
     top: 10px;
 
     @include media-breakpoint-down(lg) {
-      display: none;
+      transform: scale(0.3);
+      position: inherit;
+      width: 280px;
+      margin-left: -140px;
+      margin-top: -50px;
+      height: 280px;
     }
 
     img {
       position : absolute;
-
       opacity: 0;
       animation-name: fadeInVS1;
       animation-duration: 10s;
