--- a/src/scss/section-2.scss
+++ b/src/scss/section-2.scss
@@ -1,8 +1,21 @@
 .section2 {
-  //display: flex;
-  //justify-content: center;
-  //align-items: center;
   padding: 80px 0;
+
+  .lg-size {
+    display: block;
+
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
+  }
+
+  .sm-size {
+    display: none;
+
+    @include media-breakpoint-down(lg) {
+      display: block;
+    }
+  }
 
   img {
     width: 90px;
@@ -14,11 +27,11 @@
   }
 
   .margin-bottom {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 
   .margin-top {
-    margin-left: 10px;
+    margin-top: 20px;
   }
 
   .item {
@@ -49,9 +62,5 @@
     border-radius: 15px;
     padding: 27px 13px;
     margin: 80px;
-
-    @include media-breakpoint-down(lg) {
-      display: none;
-    }
   }
 }
