--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,7 +1,50 @@
 footer {
-  color: #FFFFFF;
-  font-size: 8px;
-  position: absolute;
-  bottom: 0;
-  padding: 5px;
+  display: none;
+  background-color: black;
+
+  nav {
+    display: flex;
+    align-items: center;
+
+    a {
+      display: flex;
+      align-items: center;
+      margin: 0 10px;
+      height: 40px;
+      text-transform: uppercase;
+      font-size: 9px;
+    }
+
+    a.__active {
+      padding-top: 3px;
+      border-top: solid 3px #E0E0E0;
+    }
+  }
+
+  @include media-breakpoint-down(lg) {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0 10px;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    border-top: solid 1px #E0E0E0;
+    font-family: Condensed-Regular, serif;
+    transition: all $a-time;
+    animation: fadeUpFooter 1s;
+    z-index: 100;
+  }
+}
+
+@keyframes fadeUpFooter {
+  0% {
+    bottom: -80px;
+  }
+
+  100% {
+    bottom: 0;
+  }
 }
