--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -13,12 +13,20 @@ footer {
       height: 40px;
       text-transform: uppercase;
       font-size: 9px;
-    }
+      transition: all $a-time;
 
+      &:hover {
+        padding-top: 3px;
+        border-bottom: solid 3px #E0E0E0;
+        transition: all $a-time;
+      }
+    }
+/*
     a.__active {
-      padding-top: 3px;
+      padding-bottom: 4px;
       border-top: solid 3px #E0E0E0;
     }
+    */
   }
 
   @include media-breakpoint-down(lg) {
