--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -12,7 +12,7 @@ header {
   font-family: Condensed-Regular, serif;
   transition: all $a-time;
   animation: fadeUp 1s;
-  z-index: 100;
+  z-index: 10;
 
   nav {
     display: flex;
@@ -25,12 +25,19 @@ header {
       height: 50px;
       text-transform: uppercase;
       font-size: 13px;
+
+      &:hover {
+        padding-top: 3px;
+        border-bottom: solid 3px #E0E0E0;
+      }
     }
 
+/*
     a.__active {
       padding-top: 3px;
       border-bottom: solid 3px #E0E0E0;
     }
+    */
   }
 
   @include media-breakpoint-down(lg) {
@@ -38,64 +45,67 @@ header {
   }
 }
 
-.header-buttons {
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  right: 0;
+.logo_header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
+
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 20px;
+  font-family: Condensed-Regular, serif;
+  animation: fadeInHeaderButton 2s;
   height: 50px;
+
+  img {
+    width: 55px;
+
+    @include media-breakpoint-down(lg) {
+      width: 40px;
+      left: 10px;
+    }
+  }
+
+  button {
+    padding: 15px;
+    font-size: 20px;
+    color: white;
+
+    @include media-breakpoint-down(lg) {
+      font-size: 15px;
+      padding: 5px;
+    }
+  }
+
+  #btn_pause {
+    display: none;
+  }
+}
+
+.pdf_link {
+  text-transform: uppercase;
+  color: #000000;
+  background-color: #FFFFFF;
+  border-radius: 3px;
+  font-size: 13px;
+  padding: 6px 9px;
+  cursor: pointer;
+
+  position: fixed;
+  z-index: 100;
+  top: 12px;
+  right: 20px;
   font-family: Condensed-Regular, serif;
   animation: fadeInHeaderButton 2s;
 
+  &:hover {
+    color: black;
+  }
+
   @include media-breakpoint-down(lg) {
-    padding: 0 10px;
-  }
-
-  .logo {
-    display: flex;
-    align-items: center;
-
-    img {
-      width: 55px;
-
-      @include media-breakpoint-down(lg) {
-        width: 40px;
-      }
-    }
-
-    button {
-      padding: 15px;
-      font-size: 20px;
-      color: white;
-
-      @include media-breakpoint-down(lg) {
-        font-size: 15px;
-        padding: 5px;
-      }
-    }
-
-    #btn_pause {
-      display: none;
-    }
-  }
-
-  .pdf_link {
-    text-transform: uppercase;
-    color: #000000;
-    background-color: #FFFFFF;
-    border-radius: 3px;
-    font-size: 13px;
-    padding: 7px 9px;
-
-    @include media-breakpoint-down(lg) {
-      font-size: 9px;
-      padding: 6px 7px;
-    }
+    font-size: 9px;
+    padding: 6px 7px;
+    right: 10px;
   }
 }
 
