--- a/src/scss/section-2.scss
+++ b/src/scss/section-2.scss
@@ -1,4 +1,4 @@
-.section2 {
+#section2 {
   padding: 80px 0;
 
   .lg-size {
@@ -57,7 +57,7 @@
     }
   }
 
-  .logo {
+  .logo_section2 {
     border: solid 1px #E0E0E0;
     border-radius: 15px;
     padding: 27px 13px;
