--- a/src/scss/section-6.scss
+++ b/src/scss/section-6.scss
@@ -4,9 +4,11 @@
   align-items: center;
   flex-direction: column;
   padding-top: 200px;
+  padding-bottom: 100px;
 
   @include media-breakpoint-down(lg) {
     padding-top: 0;
+    padding-bottom: 80px;
   }
 
   .row {
