--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -84,7 +84,7 @@ header {
 
 .pdf_link {
   text-transform: uppercase;
-  color: #000000;
+  color: #000000 !important;
   background-color: #FFFFFF;
   border-radius: 3px;
   font-size: 13px;
