--- a/src/scss/section-1.scss
+++ b/src/scss/section-1.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -10,10 +9,10 @@
   p {
     max-width: 945px;
     text-align: center;
-    animation: fadeInFast 1s;
     font-size: 19px;
     line-height: 24px;
     padding: 0 10px;
+    animation: fadeInFast 1s;
 
     @include media-breakpoint-down(lg) {
       font-size: 12px;
@@ -26,11 +25,7 @@
     position: absolute;
   }
 
-  .section1_img-effect1 {
-    animation: fadeInSlow 5s;
-  }
-
-  .section1_img-effect2 {
+  .section1_img-effect {
     animation: flicker 5s;
   }
 }
@@ -47,12 +42,7 @@
   }
 }
 
-@keyframes fadeInSlow {
-  0% { opacity: 0;}
-  100% { opacity: 1;}
-}
-
 @keyframes flicker {
-  0% { opacity: .1; transform: scale(0.9);}
+  0% { opacity: .5; transform: scale(0.9);}
   100% { opacity: 1; transform: scale(1);}
 }
