--- a/src/scss/section-3.scss
+++ b/src/scss/section-3.scss
@@ -44,7 +44,7 @@
       opacity: 0;
       animation-name: fadeInVS1;
       animation-duration: 10s;
-      animation-iteration-count: 1000;
+      animation-iteration-count: infinite;
       animation-fill-mode: forwards;
     }
   }
