--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -37,12 +37,7 @@ main {
 
 section {
   width: 100%;
-  //height: 100%;
   position: relative;
-  //left: 0;
-  //top: 0;
-  //right: 0;
-  //bottom: 0;
 }
 
 h2 {
@@ -114,6 +109,7 @@ a:hover {
   color: white;
 }
 
+// Animation classes
 .__fadeIn {
   opacity:0;
 }
