--- a/src/scss/section-2.scss
+++ b/src/scss/section-2.scss
@@ -1,5 +1,9 @@
-#section2 {
+.section2 {
   padding: 80px 0;
+
+  @include media-breakpoint-down(lg) {
+    padding: 80px 0 40px 0;
+  }
 
   .lg-size {
     display: block;
